@@ -1,3 +1,8 @@
+2000-01-27  Havoc Pennington  <hp@pobox.com>
+
+	* wrappers/gtk/gconf-client.c (check_overlap): fix the no-debug
+	case
+
 2000-01-24  Havoc Pennington  <hp@redhat.com>
 
 	* backends/xml-backend.c (resolve_address): base mode for creating
